--- a/src/app.css
+++ b/src/app.css
@@ -101,10 +101,8 @@
   }
   
   .project_tag {
-    text-transform: uppercase;
-    font-family: 'PP Neue Montreal Medium', sans-serif;
+    font-family: 'PP Neue Montreal Book', sans-serif;
     font-style: normal;
-    font-weight: 500;
     display: inline-block;
     padding: 2px 6px;
     margin-right: 5px;
