--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,8 @@
 :root {
     --color-1: #999999;
-    --color-2: #ffffff;
-    --color-3: #111111;
-    --color-4: #00ff00;
+    --color-2: #121212;
+    --color-3: #f5f5f5;
+    --color-4: #0000ff;
   
   }
 
@@ -23,7 +23,7 @@
   }
 
   main {
-    padding: 10px 50px 10px 50px;
+    padding: 10px 20px 10px 20px;
   }
   
   body {
@@ -65,7 +65,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr; 
     column-gap: 10px; 
-    text-align: right; /* Align .role text to right */
+    text-align: right; 
   }
   
   .role {
@@ -94,47 +94,47 @@
     padding: 2px 6px;
     margin-right: 5px;
     border-radius: 10px;
-    transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+    transition: color 0.3s ease, outline-color 0.3s ease;
   }
   
   .project_tag:hover {
-    background-color: var(--color-4);
-    color: var(--color-3);
+    outline: 1px solid var(--color-2);
+    color: var(--color-2);
   }
   
   .video-container {
-    width: 100%; /* or any fixed value like 600px */
-    aspect-ratio: 16 / 9; /* optional for keeping proportions */
+    width: 100%; 
+    aspect-ratio: 16 / 9; 
     overflow: hidden;
   }
   
   .video-container video, .gallery img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* or 'contain' depending on the desired effect */
-    display: block; /* removes bottom white space */
+    object-fit: cover; 
+    display: block; 
   }
   
   .gallery_content {
     display: grid;
     grid-template-columns: 1fr 1fr; 
-    column-gap: 5px;
+    column-gap: 10px;
     padding: 5px 0px;
   }
   
   .gallery {
     position: relative;
-    transition: filter 1s ease; /* Smooth transition effect */
-    padding: 5px 0px;
+    transition: filter 1s ease; 
+    padding: 10px 0px;
   }
   
   .side_by_side {
-    padding: 5px 0px;
+    padding: 10px 0px;
   }
   
   .side_by_side_content {
     column-count: 2;
-    column-gap: 5px;
+    column-gap: 10px;
   }
   
   div.side_by_side img {
@@ -175,12 +175,10 @@
   }
 
   h2 {
-
-    font-family: 'PP Neue Montreal Book', sans-serif;
+    font-family: 'PP Neue Montreal Medium', sans-serif;
     font-style: normal;
     font-size: 24px;
     color: var(--color-2);
-
   }
   
   iframe {
