--- a/src/app.css
+++ b/src/app.css
@@ -29,7 +29,7 @@ body {
   background-color: var(--color-bg);
 }
 
-code{
+code, .carousel-description {
   font-size: 13px;
   font-family: "source code pro", monospace;
   color: var(--color-code);
@@ -216,7 +216,7 @@ iframe {
     font-size: 10px;
   }
 
-  code {
+  code, .carousel-description {
     font-size: 9px;
   }
 
